# Librarian

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  claude_chat.py  openai_chat.py  standalone.py
hermes_librarian/: __init__.py  _compat.py
librarian/: __init__.py  __main__.py  _dedup.py  _embeddings.py  _extraction.py  _provider.py  _store.py  _tools.py  plugin.yaml  server.py
tests/: conftest.py  test_dedup.py  test_extraction.py  test_librarian.py  test_store.py
