[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-librarian"
version = "0.1.0"
description = "Librarian — real-time memory extraction plugin for Hermes Agent. Uses a fast LLM sidecar (Groq) to observe conversations, extract facts, and build persistent memory banks."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Manu"}]
keywords = ["hermes", "memory", "llm", "groq", "ai-agent", "persistent-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "groq>=0.11.0,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/manu/hermes-librarian"
Issues = "https://github.com/manu/hermes-librarian/issues"

[tool.setuptools.packages.find]
include = ["hermes_librarian*"]
